[project]
name = "itu-yardim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
